--- a/app/views/shared/categories/_category_newsfeed.html.erb
+++ b/app/views/shared/categories/_category_newsfeed.html.erb
@@ -1,5 +1,5 @@
-<div class= "text-center">
-  <h4 class="text-center">Choose a category of content to browse</h4><br>
+<div class="text-center">
+  <h4>Choose a category of content to browse</h4><br>
 
   <ul class="category-tabs">
     <li>
